service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeapp
  name: homeapp
  namespace: default
spec:
  ports:
  - name: "homeapp"
    port: 8080
    targetPort: 8080
  selector:
    app: homeapp
status:
  loadBalancer: {}
