ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeapp
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: homeapp
          servicePort: 8080
